--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <head>
 </head>
 <body>
+<table id="table">
+    <tr>
+        <td>aaa</td>
+        <td></td>
+        <td>ccc</td>
+    </tr>
+</table>
 <div id="main"></div>
+<script src="./node_modules/jquery/dist/jquery.js"></script>
 <script src="./index.js"></script>
 </body>
 </html>
